--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
+
 <body>
-    Hola, cómo estás?
+    <div class="container mx-100px">
+        <header class="d-flex flex-row justify-content-around">
+            <div class="col-sm-3">newsasfacts</div>
+            <div class="col-sm-3"><button type="button" class="">aaaaaaa</button><button type="button"
+                    class="">aaaaaaa</button></div>
+        </header>
+        <div class="d-flex flex-row justify-content-around">
+            <p>S&P 500 <span>-1.18%</span> 4513.041</p>
+            <p>BTC/USD <span>-0.88%</span> $56693.63</p>
+            <p>BTC/USD <span>-0.86%</span> $56693.63</p>
+        </div>
+
+        <div class="row text-center">
+            <h2>The most important news around the world.</h2>
+            <h2>Unbiased. Concise. Forever ad-free and privacy respecting.</h2>
+        </div>
+
+        <div class="d-flex flex-row justify-content-center">
+            <nav><button type="button" class="btn btn-light">Newer</button><button type="button"
+                    class="btn btn-light">Home</button><button type="button" class="btn btn-light">Older</button></nav>
+        </div>
+        <h1>December 2, 2021 (Thursday)</h1>
+        <h3>0.3 minutes to read</h3>
+        <div class="row">
+
+        </div>
+        <div class="row">
+
+        </div>
+        <div class="d-flex flex-row justify-content-center">
+            <nav><button>Newer</button><button>Home</button><button>Older</button></nav>
+        </div>
+        <footer class="d-flex flex-row justify-content-between">
+            <div><a href="">newsasfacts</a></div>
+            <div><a href="">About</a><a href="">Contact</a><a href="">Terms</a><a href="">Privacy</a></div>
+        </footer>
+    </div>
 </body>
+
 </html>
