algunas cosas mas

--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="container-sm">
     <div class="container mx-100px">
         <header class="d-flex flex-row justify-content-around">
             <div class="col-sm-3">newsasfacts</div>
-            <div class="col-sm-3"><button type="button" class="">aaaaaaa</button><button type="button"
-                    class="">aaaaaaa</button></div>
+            <div class="col-sm-3"><span><img src="palette.svg" /></span><button type="button" class="rounded-pill">aaaaaaa</button></div>
         </header>
         <div class="d-flex flex-row justify-content-around">
             <p>S&P 500 <span>-1.18%</span> 4513.041</p>
@@ -29,23 +28,53 @@
         </div>
 
         <div class="d-flex flex-row justify-content-center">
-            <nav><button type="button" class="btn btn-light">Newer</button><button type="button"
-                    class="btn btn-light">Home</button><button type="button" class="btn btn-light">Older</button></nav>
+            <nav><button type="button" class="btn btn-light rounded-pill shadow-sm">&lt&lt Newer</button><button type="button"
+                    class="btn btn-light rounded-pill shadow-sm">Home</button><button type="button" class="btn btn-light rounded-pill shadow-sm">Older&gt&gt</button></nav>
         </div>
         <h1>December 2, 2021 (Thursday)</h1>
         <h3>0.3 minutes to read</h3>
-        <div class="row">
-
+        <h2>Armed conflicts and attacks</h2>
+        <div class="news-card row shadow rounded">
+            <p>The New Zealand Defence Force and Police head to Honiara, Solomon Islands, to help stabilize the country
+                and maintain peace after days of rioting, looting and unrest, that left three people dead. (RNZ)</p>
+            <a href="">2021 Solomon Islands unrest</a><a href="">Another link to something</a>
         </div>
-        <div class="row">
-
+        <h2>Armed conflicts and attacks</h2>
+        <div class="news-card row shadow rounded">
+            <p>The New Zealand Defence Force and Police head to Honiara, Solomon Islands, to help stabilize the country
+                and maintain peace after days of rioting, looting and unrest, that left three people dead. (RNZ)</p>
+            <a href="">2021 Solomon Islands unrest</a><a href="">Another link to something</a>
         </div>
+        <h1>December 2, 2021 (Thursday)</h1>
+        <h3>0.3 minutes to read</h3>
+        <h2>Armed conflicts and attacks</h2>
+        <div class="news-card row shadow rounded">
+            <p>The New Zealand Defence Force and Police head to Honiara, Solomon Islands, to help stabilize the country
+                and maintain peace after days of rioting, looting and unrest, that left three people dead. (RNZ)</p>
+            <a href="">2021 Solomon Islands unrest</a><a href="">Another link to something</a>
+        </div>
+        <h2>Armed conflicts and attacks</h2>
+        <div class="news-card row shadow rounded">
+            <p>The New Zealand Defence Force and Police head to Honiara, Solomon Islands, to help stabilize the country
+                and maintain peace after days of rioting, looting and unrest, that left three people dead. (RNZ)</p>
+            <a href="">2021 Solomon Islands unrest</a><a href="">Another link to something</a>
+        </div>
+        <h2>Armed conflicts and attacks</h2>
+        <div class="news-card row shadow rounded">
+            <p>The New Zealand Defence Force and Police head to Honiara, Solomon Islands, to help stabilize the country
+                and maintain peace after days of rioting, looting and unrest, that left three people dead. (RNZ)</p>
+            <a href="">2021 Solomon Islands unrest</a><a href="">Another link to something</a>
+        </div>
+
+
+
         <div class="d-flex flex-row justify-content-center">
-            <nav><button>Newer</button><button>Home</button><button>Older</button></nav>
+            <nav><button type="button" class="btn btn-light rounded-pill">Newer</button><button type="button"
+                class="btn btn-light rounded-pill">Home</button><button type="button" class="btn btn-light rounded-pill">Older</button></nav>
         </div>
         <footer class="d-flex flex-row justify-content-between">
             <div><a href="">newsasfacts</a></div>
-            <div><a href="">About</a><a href="">Contact</a><a href="">Terms</a><a href="">Privacy</a></div>
+            <div class="d-flex justify-content-between"><a href="">About</a><a href="">Contact</a><a href="">Terms</a><a href="">Privacy</a></div>
         </footer>
     </div>
 </body>
