--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="container mx-100px">
         <header class="d-flex flex-row justify-content-around">
             <div class="col-sm-3">newsasfacts</div>
-            <div class="col-sm-3"><span><img src="palette.svg" /></span><button type="button" class="rounded-pill">aaaaaaa</button></div>
+            <div class="col-sm-3"><span><img src="palette.svg" /></span><button type="button"
+                    class="rounded-pill btn btn-primary">Sign up/ in</button></div>
         </header>
         <div class="d-flex flex-row justify-content-around">
             <p>S&P 500 <span>-1.18%</span> 4513.041</p>
@@ -22,59 +23,45 @@
             <p>BTC/USD <span>-0.86%</span> $56693.63</p>
         </div>
 
-        <div class="row text-center">
+        <div class="row text-center py-3">
             <h2>The most important news around the world.</h2>
             <h2>Unbiased. Concise. Forever ad-free and privacy respecting.</h2>
         </div>
 
-        <div class="d-flex flex-row justify-content-center">
-            <nav><button type="button" class="btn btn-light rounded-pill shadow-sm">&lt&lt Newer</button><button type="button"
-                    class="btn btn-light rounded-pill shadow-sm">Home</button><button type="button" class="btn btn-light rounded-pill shadow-sm">Older&gt&gt</button></nav>
+        <div class="d-flex flex-row justify-content-center py-3">
+            <nav><button type="button" class="btn btn-light rounded-pill shadow-sm">&lt&lt Newer</button><button
+                    type="button" class="btn btn-light rounded-pill shadow-sm">Home</button><button type="button"
+                    class="btn btn-light rounded-pill shadow-sm">Older&gt&gt</button></nav>
         </div>
+        
         <h1>December 2, 2021 (Thursday)</h1>
         <h3>0.3 minutes to read</h3>
+     
         <h2>Armed conflicts and attacks</h2>
         <div class="news-card row shadow rounded">
-            <p>The New Zealand Defence Force and Police head to Honiara, Solomon Islands, to help stabilize the country
-                and maintain peace after days of rioting, looting and unrest, that left three people dead. (RNZ)</p>
-            <a href="">2021 Solomon Islands unrest</a><a href="">Another link to something</a>
+            <p>The <a href="https://en.wikipedia.org/wiki/New_Zealand_Defence_Force">New Zealand Defence Force</a> and
+                <a href="https://en.wikipedia.org/wiki/New_Zealand_Police">Police</a> head to <a
+                    href="https://en.wikipedia.org/wiki/Honiara">Honiara</a> , <a
+                    href="https://en.wikipedia.org/wiki/Solomon_Islands">Solomon Islands</a> , to help stabilize the
+                country and maintain peace after days of rioting, looting and unrest, that left three people dead. <a
+                    href="https://www.rnz.co.nz/international/pacific-news/457046/new-zealand-joins-regional-effort-to-stablise-solomon-islands"></a>
+                (RNZ)
+            </p>
+            <div class="d-flex justify-content-around"><a href="" class="">2021 Solomon Islands unrest</a><a href="">Another link to something</a></div>
+            <div><a href="">link</a><a href="">embed</a><a href="">save</a></div>
         </div>
-        <h2>Armed conflicts and attacks</h2>
-        <div class="news-card row shadow rounded">
-            <p>The New Zealand Defence Force and Police head to Honiara, Solomon Islands, to help stabilize the country
-                and maintain peace after days of rioting, looting and unrest, that left three people dead. (RNZ)</p>
-            <a href="">2021 Solomon Islands unrest</a><a href="">Another link to something</a>
-        </div>
-        <h1>December 2, 2021 (Thursday)</h1>
-        <h3>0.3 minutes to read</h3>
-        <h2>Armed conflicts and attacks</h2>
-        <div class="news-card row shadow rounded">
-            <p>The New Zealand Defence Force and Police head to Honiara, Solomon Islands, to help stabilize the country
-                and maintain peace after days of rioting, looting and unrest, that left three people dead. (RNZ)</p>
-            <a href="">2021 Solomon Islands unrest</a><a href="">Another link to something</a>
-        </div>
-        <h2>Armed conflicts and attacks</h2>
-        <div class="news-card row shadow rounded">
-            <p>The New Zealand Defence Force and Police head to Honiara, Solomon Islands, to help stabilize the country
-                and maintain peace after days of rioting, looting and unrest, that left three people dead. (RNZ)</p>
-            <a href="">2021 Solomon Islands unrest</a><a href="">Another link to something</a>
-        </div>
-        <h2>Armed conflicts and attacks</h2>
-        <div class="news-card row shadow rounded">
-            <p>The New Zealand Defence Force and Police head to Honiara, Solomon Islands, to help stabilize the country
-                and maintain peace after days of rioting, looting and unrest, that left three people dead. (RNZ)</p>
-            <a href="">2021 Solomon Islands unrest</a><a href="">Another link to something</a>
-        </div>
-
+        <hr>
 
 
         <div class="d-flex flex-row justify-content-center">
-            <nav><button type="button" class="btn btn-light rounded-pill">Newer</button><button type="button"
-                class="btn btn-light rounded-pill">Home</button><button type="button" class="btn btn-light rounded-pill">Older</button></nav>
+            <nav><button type="button" class="btn btn-light rounded-pill shadow-sm">&lt&lt Newer</button><button
+                    type="button" class="btn btn-light rounded-pill shadow-sm">Home</button><button type="button"
+                    class="btn btn-light rounded-pill shadow-sm">Older&gt&gt</button></nav>
         </div>
         <footer class="d-flex flex-row justify-content-between">
             <div><a href="">newsasfacts</a></div>
-            <div class="d-flex justify-content-between"><a href="">About</a><a href="">Contact</a><a href="">Terms</a><a href="">Privacy</a></div>
+            <div class="d-flex justify-content-between"><a href="">About</a><a href="">Contact</a><a href="">Terms</a><a
+                    href="">Privacy</a></div>
         </footer>
     </div>
 </body>
